test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/pointer_conversions/compare_void_to_other_pointer.plx
pub fn main(none) i32 {
    arr: [3]i32 = $(1, 2, 3)
    ptr: *any = cast<*any>(arr)
    #  you can't compare pointers to different types, e..g. void * to int *
    return ptr < arr + 1
}
